--- a/src/index.html
+++ b/src/index.html
@@ -9,82 +9,130 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application"
-    method="GET" onsubmit="onSubmit()">
+    <form
+      action="https://mate-academy-form-lesson.herokuapp.com/create-application"
+      method="GET"
+      onsubmit="onSubmit()"
+    >
       <fieldset class="container">
         <legend>
           Personal information
         </legend>
         <div class="block">
           <label for="surname">Surname:</label>
-          <input type="text" id="surname"
-          name="surname" autocomplete="off"
-          required>
+          <input
+            type="text"
+            id="surname"
+            name="surname"
+            autocomplete="off"
+            required
+          >
         </div>
         <div class="block">
           <label for="name">Name:</label>
-          <input type="text" id="name"
-            name="name" autocomplete="off"
-            required>
+          <input type="text"
+            id="name"
+            name="name"
+            autocomplete="off"
+            required
+          >
         </div>
         <div class="block">
           <label for="age">How old are You?</label>
-          <input type="number" id="age"
-          name="age" autocomplete="off"
-          value="12" min="12"
-          max="100">
+          <input
+            type="number"
+            id="age"
+            name="age"
+            autocomplete="off"
+            value="12"
+            min="12"
+            max="100"
+          >
         </div>
         <div class="block">
           <label for="birthdate">Full date of birth:</label>
-          <input type="date" id="birthdate"
-          name="birthdate" autocomplete="off">
+          <input
+            type="date"
+            id="birthdate"
+            name="birthdate"
+            autocomplete="off"
+          >
         </div>
         <div class="block">
           <label for="agreement">I accept the term of the agreement</label>
-          <input type="checkbox" id="agreement"
-            name="agreement" autocomplete="off"
-            required>
+          <input
+            type="checkbox"
+            id="agreement"
+            name="agreement"
+            autocomplete="off"
+            required
+          >
         </div>
       </fieldset>
       <fieldset class="container">
         <legend>Registration</legend>
         <div class="block">
           <label for="email">E-mail:</label>
-          <input type="email" id="email"
-          name="email" placeholder="email@example.com">
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="email@example.com"
+          >
         </div>
         <div class="block">
           <label for="password">Password:</label>
-          <input type="password" id="password"
-          name="password" minlength="5"
-          maxlength="15">
+          <input
+            type="password"
+            id="password"
+            name="password"
+            minlength="5"
+            maxlength="15"
+          >
         </div>
       </fieldset>
       <fieldset class="container">
         <legend>An interesting fact about you!</legend>
         <div class="block">
           Do you love cats?
-          <input type="radio" id="yes"
-            name="love-cats">
+          <input
+            type="radio"
+            id="yes"
+            name="love-cats"
+          >
           <label for="yes">Yes</label>
-          <input type="radio" id="no"
-            name="love-cats">
+          <input
+            type="radio"
+            id="no"
+            name="love-cats"
+          >
           <label for="no">No</label>
         </div>
         <div class="block">
           <label for="color">What is your favorite color?</label>
-          <input type="color" name="color"
-          id="color">
+          <input
+            type="color"
+            name="color"
+            id="color"
+          >
         </div>
         <div class="block">
           <label for="sleep-time">What time do you go to bed?</label>
-          <input type="time" name="sleep-time"
-          id="sleep-time" step="2">
+          <input
+            type="time"
+            name="sleep-time"
+            id="sleep-time"
+            step="2"
+          >
         </div>
         <div class="block">
           <label for="cars">What is your favorite brand of cars?</label>
-          <select name="cars" id="cars"
-          size="4" multiple="">
+          <select
+            name="cars"
+            id="cars"
+            size="4"
+            multiple=""
+          >
             <option value="bmw">BMW</option>
             <option value="audi">Audi</option>
             <option value="lada">Lada</option>
@@ -92,15 +140,23 @@
         </div>
         <div class="block">
           <label for="rate">How do you rate our work?</label>
-          <input type="range" id="rate"
-          name="rate" value="0">
+          <input
+            type="range"
+            id="rate"
+            name="rate"
+            value="0"
+          >
         </div>
       </fieldset>
       <fieldset class="container">
         <legend>Additional info:</legend>
         <div class="block">
           <label for="comments">Comments:</label>
-          <textarea id="comments" name="comments"></textarea>
+          <textarea
+            id="comments"
+            name="comments"
+          >
+          </textarea>
         </div>
         <div class="block">
           <label for="recommend">Would you recommend us?:</label>
